# meross-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
doc/: firmware.md  teardown.md  tools.md
libmeross/: cli.py  config.py  model.py  mqtt.py  protocol.py  util.py
libmeross/ambz2/: layout.py
libmeross/commands/: __init__.py  discover.py  shared.py
libmeross/commands/chip/: __init__.py  console.py  read.py
libmeross/commands/chip/amebaz2/: __init__.py  console.py  read.py  util.py
libmeross/commands/chip/mtk/: __init__.py  ota.py
libmeross/commands/cloud/: __init__.py  firmware.py  info.py  logout.py  signup.py
libmeross/commands/cloud/auth/: __init__.py  login.py  signup.py
libmeross/commands/cloud/devices/: __init__.py  add_.py  list_.py
libmeross/commands/device/: __init__.py  bind.py  info.py  query.py  unbind.py
libmeross/mtk/: image.py
tests/: test_create_partition_table.py
